ec2/lab/with_vpc/vpc.tf
resource "aws_vpc" "stack-example-vpc" {
  cidr_block = "${var.vpc_cidr}"
  enable_dns_support = true
  enable_dns_hostnames = true

  tags {
    Name = "stack-example-vpc"
  }
}
